vendor/sdo-agentforce-observability/main/default/objects/SDO_Analytics_AiAgentInteraction_v2__c/SDO_Analytics_AiAgentInteraction_v2__c.object-meta.xml
<CustomObject>
    <label>AiAgentInteraction</label>
    <nameField>
        <label>AiAgentInteraction</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AIAgentInteractions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>