vendor/sdo-agentforce-observability/main/default/objects/SDO_Analytics_AiAgentInteraction_v2__c/fields/Ai_Agent_Interaction_Type__c.field-meta.xml
<CustomField>
    <fullName>Ai_Agent_Interaction_Type__c</fullName>
    <label>Ai Agent Interaction Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>