vendor/sdo-agentforce-observability/main/default/objects/SDO_Analytics_AiAgentInteraction_v2__c/fields/AI_Agent_Session__c.field-meta.xml
<CustomField>
    <fullName>AI_Agent_Session__c</fullName>
    <label>AI Agent Session</label>
    <length>255</length>
    <type>Text</type>
</CustomField>