vendor/sdo-agentforce-observability/main/default/objects/SDO_Analytics_AiAgentInteraction_v2__c/fields/Attribute__c.field-meta.xml
<CustomField>
    <fullName>Attribute__c</fullName>
    <label>Attribute</label>
    <length>255</length>
    <type>Text</type>
</CustomField>