vendor/sdo-agentforce-observability/main/default/objects/SDO_Analytics_AiAgentInteraction_v2__c/fields/End_Days__c.field-meta.xml
<CustomField>
    <fullName>End_Days__c</fullName>
    <label>End Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>