vendor/sdo-agentforce-observability/main/default/objects/SDO_Analytics_AiAgentInteraction_v2__c/fields/Previous_Interaction__c.field-meta.xml
<CustomField>
    <fullName>Previous_Interaction__c</fullName>
    <label>Previous Interaction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>