vendor/sdo-agentforce-observability/main/default/objects/SDO_Analytics_AiAgentInteraction_v2__c/fields/Session_Owner_Object__c.field-meta.xml
<CustomField>
    <fullName>Session_Owner_Object__c</fullName>
    <label>Session Owner Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>