vendor/sdo-agentforce-observability/main/default/objects/SDO_Analytics_AiAgentInteraction_v2__c/fields/Telemetry_Trace_Span__c.field-meta.xml
<CustomField>
    <fullName>Telemetry_Trace_Span__c</fullName>
    <label>Telemetry Trace Span</label>
    <length>255</length>
    <type>Text</type>
</CustomField>