vendor/sdo-agentforce-observability/main/default/objects/SDO_Analytics_AiAgentInteraction_v2__c/fields/Topic_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Topic_API_Name__c</fullName>
    <label>Topic API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>