vendor/sdo-agentforce-observability/main/default/objects/SDO_Analytics_AiAgentInteraction_v2__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Ai_Agent_Interaction_Type__c</columns>
    <columns>AI_Agent_Session__c</columns>
    <columns>Attribute__c</columns>
    <columns>Individual__c</columns>
    <columns>Previous_Interaction__c</columns>
    <columns>Session_Owner__c</columns>
    <columns>Session_Owner_Object__c</columns>
    <columns>Telemetry_Trace__c</columns>
    <columns>Telemetry_Trace_Span__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>